Fixed css bug causing the Bus from the animation appearing momentarily in wrong position

--- a/style.css
+++ b/style.css
@@ -214,11 +214,12 @@ a:hover {
 .svgBusStop .st1 {
     fill: white;
 }
-.svgBus {
+svg.svgBus {
     position: absolute;
     fill: white;
     bottom: 0;
     width: 220px;
+    display: none;
 }
 .svgBus-body {    
     animation-name: wobblingBus;
